🎨 Add CSS utility

--- a/assets/css/abstracts/_utility.css
+++ b/assets/css/abstracts/_utility.css
@@ -88,6 +88,14 @@
   aspect-ratio: 16 / 9;
 }
 
+.ar-9-16 {
+  aspect-ratio: 9 / 16;
+}
+
+.ar-1-1 {
+  aspect-ratio: 1 / 1;
+}
+
 .pos-r {
   position: relative;
 }
@@ -107,7 +115,7 @@
 
 .gold {
   background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
-    background-clip: border-box, border-box;
+  background-clip: border-box, border-box;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
