--- a/content/index.njk
+++ b/content/index.njk
@@ -65,7 +65,7 @@ scripts: '
 	<div class="av-br">
 		<article class="dashboard__item">
 		{{ macro.callout(
-			element = 'article',
+			element = 'div',
 			modifiers = 'callout--small callout--neocities bg-wiggly',
 			emoji = '<img src="/images/neomoji.png" alt="Cat emoji holding a paintbrush and spanner">',
 			header = '<h2><a href="https://neocities.org/site/fri11s" class="">Neocities profile</a></h2>',
