--- a/structure/global/footer.njk
+++ b/structure/global/footer.njk
@@ -1,11 +1,13 @@
-<footer class="page__footer">
-    <div class=" grid grid--offset grid--footer">
-        <nav aria-label="Footer" class="page__nav">
-            <ul>
-                <li><span class="emoji" aria-hidden="true">⬆️</span> <a href="#top">Back to top</a></li>
-                <li><span class="emoji" aria-hidden="true">♿</span> <a href="/accessibility">Accessibility</a>
-                <li><span class="emoji" aria-hidden="true">👩‍💻</span> <a href="/colophon">Colophon</a>
-            </ul>
-        </nav>
-    </div>
+<div class="page__footerbg">
+    <footer class="page__footer">
+        <div class=" grid grid--offset grid--footer">
+            <nav aria-label="Footer" class="page__nav">
+                <ul>
+                    <li><span class="emoji" aria-hidden="true">⬆️</span> <a href="#top">Back to top</a></li>
+                    <li><span class="emoji" aria-hidden="true">♿</span> <a href="/accessibility">Accessibility</a>
+                    <li><span class="emoji" aria-hidden="true">👩‍💻</span> <a href="/colophon">Colophon</a>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </div>
