--- a/assets/css/base/_page.css
+++ b/assets/css/base/_page.css
@@ -41,21 +41,25 @@
 }
 
 /* Footer */
-.page__footer {
+.page__footerbg {
   background-color: var(--bodybg);
+  mask: var(--wiggleup);
+}
+
+.page__footer {
   max-width: 1600px;
   margin: 2rem auto 0 auto;
-  padding: 1.5rem 1rem;
+  padding: 2.5rem 1rem 1.5rem 1rem;
 }
 
 @media (min-width: 768px) {
 .page__footer {
-    padding: 1.5rem 1.5rem;
+    padding: 2.5rem 1.5rem 1.5rem 1.5rem;
   }
 }
 
 @media (min-width: 992px) {
 .page__footer {
-    padding: 1.5rem 4rem 2rem 4rem;
+    padding: 2.5rem 4rem 2rem 4rem;
   }
 }
