--- a/content/experiments/css-ghost.njk
+++ b/content/experiments/css-ghost.njk
@@ -35,10 +35,10 @@ style: '
         content: "";
         background: white;
         border-radius: 150px 150px 30px 30px;
-       --mask: 
+       --ghostwiggle: 
         linear-gradient(to top,#0000 30px,#000 0),
         radial-gradient(30px,#000 98%,#0000) bottom/55.50px 60px;
-        mask: var(--mask);
+        mask: var(--ghostwiggle);
         position: absolute;
         top: 0;
         left: 0;
