--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -6,9 +6,9 @@
     {#- Redirect -#}
     {%- if redirectTo -%}
     <script>location = '{{redirectTo}}';</script>
-    <meta http-equiv="refresh" content="0; url={{metadata.url}}{{redirectTo}}" />
-    <link rel="canonical" href="{{metadata.url}}{{redirectTo}}" />
-    <meta name="robots" content="noindex" />
+    <meta http-equiv="refresh" content="0; url={{metadata.url}}{{redirectTo}}">
+    <link rel="canonical" href="{{metadata.url}}{{redirectTo}}">
+    <meta name="robots" content="noindex">
     {%- else %}
     <link rel="canonical" href="{{metadata.url}}{{page.url}}">
     {%- endif %}
