👩‍💻 Update colophon link

--- a/content/colophon.njk
+++ b/content/colophon.njk
@@ -46,7 +46,7 @@ rss: false
 		<h2>Site links</h2>
 		<ul class="stars">
 			<li><a href="/changelog">Changelog</a>
-			<li><a href="https://tinylytics.app/sites/891">Vistor statistics</a>
+			<li><a href="https://tinylytics.app/public/Cg94F3t4cxHAKMpzM_Z5">Vistor statistics</a>
 			<li><a href="https://proven.lol/79f13f">Proven.lol</a>
 			<li><a href="https://feedcanary.com/feed/9b76bf9c-56b3-4882-b271-9f6c6bfd1ea2">Feed canary for 'All' RSS feed</a>
 		</ul>
