⌚ Update Now page

--- a/content/now.njk
+++ b/content/now.njk
@@ -22,25 +22,24 @@ date: 2024-02-23
 
   <h2>Days</h2>
   <ul>
-    <li>Playing <a href="https://rogule.com/">Rogule</a> daily.</li>
-    <li>Playing <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a> daily.</li>
-    <li>Still reading, slower but still doin' it.</li>
-    <li>Posting daily summaries on Mastodon with a '<a href="https://indieweb.social/tags/todayiam">Today I am</a>' series.</li>
-    <li>Exploring <a href="https://omg.lol">omg.lol</a>.</li>
-    <li>Binge watching <a href="https://www.imdb.com/title/tt10986410/">Ted Lasso</a>.</li>
-    <li>My theme for <a href="https://32bit.cafe/">32bit.cafe</a> is the default at the moment!</li>
+    <li>Playing <a href="https://rogule.com/">Rogule</a> and <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a> daily.</li>
+    <li>Done zero reading. My sister is hot on my heels with ToG.</li>
+    <li>Got a promotion to Senior Accessibility Specialist!</li>
+    <li>Engagement and wedding rings should be finished any day now!?</li>
   </ul>
   {# ------------------------------ #}
   <h2>Weeks</h2>
   <ul>
-    <li>Home sort out.</li>
-    <li>Working in the open for my RPG inspired about page.</li>
+    <li>Office decorating 🌸</li>
+    <li>Watching <a href="https://www.formula1.com/">Formula 1</a>.
+    <li>Watching <a href="https://nebula.tv/jetlag">Jet Lag: The Game (Hide and Seek)</a>.
+    <li>My theme for <a href="https://32bit.cafe/">32bit.cafe</a> is the default at the moment!</li>
   </ul>
   {# ------------------------------ #}
   <h2>Months</h2>
   <ul>
     <li>Reading the Throne of Glass series and enjoying it. I had been in a reading dry spell for 2½ years, so I am really savouring it at the moment. I have a large TBR list now.</li>
-    <li>Lots of accessibility assessments for work. There has a been a fresh flurry of clients requesting them, I think as part of the UK gov carrying out more monitoring reports.</li>
+    <li>Work is slow, then fast, then slow. Inconsistent work flows at the moment.</li>
     <li>Maintaining the health of pup dog (suffered from an acute kidney injury in September 2023). Blood tests (to monitor her creatinine and urea levels) are now once every six months.</li>
     <li>Trying to get my ass in gear to organise a wedding.</li>
   </ul>
