--- a/content/links.njk
+++ b/content/links.njk
@@ -325,6 +325,13 @@ scripts: '<script>
     "href": "https://bulltown.2022.joejenett.com/",
     "src": "joejenett.png",
     "type": "button"
+  }, {
+    "name": "flower.codes",
+    "href": "https://http://flower.codes/",
+    "size": "11px",
+    "bg": "#9bbc0f",
+    "color": "#222222",
+    "type": "link"
   }
 ] %}
 
@@ -365,6 +372,12 @@ scripts: '<script>
     "href": "https://jegtnes.com/",
     "size": "12px",
     "bg": "#ffffff",
+    "color": "#333"
+  }, {
+    "name": "Phil Wilson",
+    "href": "https://philwilson.org",
+    "size": "12px",
+    "bg": "MediumSeaGreen",
     "color": "#222222"
   }
 ] %}
