--- a/content/links.njk
+++ b/content/links.njk
@@ -371,8 +371,8 @@ scripts: '<script>
     "name": "Alex Jegtnes",
     "href": "https://jegtnes.com/",
     "size": "12px",
-    "bg": "#ffffff",
-    "color": "#333"
+    "bg": "#a3001e",
+    "color": "#fff"
   }, {
     "name": "Phil Wilson",
     "href": "https://philwilson.org",
