--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -17,6 +17,9 @@
     <link rel="alternate" type="application/rss+xml" title="Frills - Blog & experiments" href="{{metadata.url}}/rss.xml">
     <link rel="alternate" type="application/rss+xml" title="Frills - Bookmarks" href="{{metadata.url}}/bookmarks.xml">
     <link rel="alternate" type="application/rss+xml" title="Frills - Changelog" href="{{metadata.url}}/changelog.xml">
+    {# Webmentions #}
+    <link rel="webmention" href="https://webmention.io/frills.dev/webmention" />
+    <link rel="pingback" href="https://webmention.io/frills.dev/xmlrpc" />
     {# Places I claim on the internet #}
     <link rel="me" href="https://indieweb.social/@frills">
     <link rel="me" href="https://social.lol/@frills">
