--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -17,6 +17,7 @@
     <link rel="alternate" type="application/rss+xml" title="Frills - Blog & experiments" href="{{metadata.url}}/rss.xml">
     <link rel="alternate" type="application/rss+xml" title="Frills - Bookmarks" href="{{metadata.url}}/bookmarks.xml">
     <link rel="alternate" type="application/rss+xml" title="Frills - Changelog" href="{{metadata.url}}/changelog.xml">
+	<link href="mailto:fri11s@proton.me" rel="me">
     {# Webmentions #}
     <link rel="webmention" href="https://webmention.io/frills.dev/webmention" />
     <link rel="pingback" href="https://webmention.io/frills.dev/xmlrpc" />
@@ -33,11 +34,11 @@
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     {# Style #}
-    <link href="/css/main.css?nocache=beep" rel="stylesheet">
+    <link href="/css/main.css?nocache={{ metadata.nocache }}" rel="stylesheet">
     {%- if style -%}
     <style>{{ style | safe }}</style>
     {%- endif %}
     {# Font -#}
     <link rel="preload" as="font" href="/fonts/atkinson-hyperlegible/regular.woff2">
-    <noscript><link href="/css/noscript.css?nocache=beep" rel="stylesheet"></noscript>
+    <noscript><link href="/css/noscript.css?nocache={{ metadata.nocache }}" rel="stylesheet"></noscript>
 </head>
