--- a/content/about.njk
+++ b/content/about.njk
@@ -23,129 +23,120 @@ scripts: '<link rel="stylesheet" href="/css/pages/about.css">'
 		header = '<h2>Work in progress</h2>',
         body = 'For the development of this page, I am working in the open! So you\'ll see it only partly built. There may be bugs or things might look weird on certain browsers or device widths. That\'s the beauty!') }}
 
-
 	<div class="charactersheet">
 
-	<div class="charactersheet-character">
-		<span class="bigboibanner">Internet witch</span>
-		<div class="whosthatgirl">
-			<div class="itsfrills-name">
-				<h2>Name</h2>
-				<p>Frills</p>
+		<div class="charactersheet-character">
+			<span class="bigboibanner">Internet witch</span>
+			<div class="whosthatgirl">
+				<div class="itsfrills-name">
+					<h2>Name</h2>
+					<p>Frills</p>
+				</div>
+				<div class="itsfrills-race">
+					<h2>Race</h2>
+					<p>Human</p>
+				</div>
+				<div class="itsfrills-level">
+					<h2>Level</h2>
+					<p>3X</p>
+				</div>
+				<div class="itsfrills-alignment">
+					<h2>Alignment</h2>
+					<p>Chaotic Good</p>
+				</div>
+				<div class="itsfrills-something">
+					<h2>Class</h2>
+					<p>Sorcerer</p>
+				</div>
 			</div>
-			<div class="itsfrills-race">
-				<h2>Race</h2>
-				<p>Human</p>
-			</div>
-			<div class="itsfrills-level">
-				<h2>Level</h2>
-				<p>3X</p>
-			</div>
-			<div class="itsfrills-alignment">
-				<h2>Alignment</h2>
-				<p>Chaotic Good</p>
-			</div>
-			<div class="itsfrills-something">
-				<h2>Class</h2>
-				<p>Sorcerer</p>
+			<div class="piccy">
+				<img src="/images/collections/avatars/andycarolan.png">
 			</div>
 		</div>
-		<div class="piccy">
-			<img src="/images/collections/avatars/andycarolan.png">
-		</div>
-	</div>
 
-	<div class="charactersheet-stats">
-		<h2 class="visually-hidden">Stats</h2>
-		{# 
-		8 = -1
-		10 = 0
-		12 = +1
-		14 = +2
-		16 = +3
-		18 = +4
-		20 = +5 #}
+		<div class="charactersheet-stats mb-2">
+			<h2 class="visually-hidden">Stats</h2>
+			<div class="stat-str">
+				<h3>Strength</h3>
+				<p class="bigstat"><span class="visually-hidden">Ability score: </span>9</p>
+				<p class="smolstat"><span class="visually-hidden">Modifier: </span>-1</p>
+			</div>
+			<div class="stat-dex">
+				<h3>Dexterity</h3>
+				<p class="bigstat"><span class="visually-hidden">Ability score: </span>11</p>
+				<p class="smolstat"><span class="visually-hidden">Modifier: </span>+0</p>
+			</div>
+			<div class="stat-con">
+				<h3>Constitution</h3>
+				<p class="bigstat"><span class="visually-hidden">Ability score: </span>15</p>
+				<p class="smolstat"><span class="visually-hidden">Modifier: </span>+2</p>
+			</div>
+			<div class="stat-wis">
+				<h3>Wisdom</h3>
+				<p class="bigstat"><span class="visually-hidden">Ability score: </span>16</p>
+				<p class="smolstat"><span class="visually-hidden">Modifier: </span>+3</p>
+			</div>
+			<div class="stat-int">
+				<h3>Intelligence</h3>
+				<p class="bigstat"><span class="visually-hidden">Ability score: </span>14</p>
+				<p class="smolstat"><span class="visually-hidden">Modifier: </span>+2</p>
+			</div>
+			<div class="stat-cha">
+				<h3>Charisma</h3>
+				<p class="bigstat"><span class="visually-hidden">Ability score: </span>13</p>
+				<p class="smolstat"><span class="visually-hidden">Modifier: </span>+1</p>
+			</div>
+		</div>
 
-		<div class="stat-str">
-			<h3>Strength</h3>
-			<p class="bigstat"><span class="visually-hidden">Ability score: </span>9</p>
-			<p class="smolstat"><span class="visually-hidden">Modifier: </span>-1</p>
+		<div class="bentobox">
+			<h2 class="visually-hidden">Pronouns</h2>
+			<div>she/her</div>
+			<h2 class="visually-hidden">Get in contact</h2>
+			<div>
+				<a href="https://indieweb.social/@frills">@frills@indieweb.social</a>
+			</div>
+			<div>
+				fri11s [at] proton [dot] me
+			</div>
+			<div>
+				<a href="/guestbook">Leave a message</a>
+			</div>
+			<div>
+				<h2>Backstory</h2>
+				<p>An average human, with lots of hobbies and complexity. Grew up in the sticks in the South West of England, moved to Wales for love of reading complicated road signs.</p>
+				<p>Always wanted to have a small arts business, but settled as a frontend developer to pay the bills (also absolutely love it).</p>
+			</div>
+			<div>
+				<h2>Morality</h2>
+				<p>Strong morality compass, especially in my work. Tech for good is my goal. My focus is on web accessibility, sustainability and climate impact.</p>
+			</div>
+			<div>
+				<h2>Languages</h2>
+				<ul>
+					<li>English (native)</li>
+					<li>Welsh (beginner/dysgu)</li>
+				</ul>
+			</div>
+			<div>
+				<h2>Marital status</h2>
+				<p>Engaged 💍</p>
+			</div>
+			<h2 class="visually-hidden">Favourites</h2>
+			<div style="background-color:deeppink; color: black;">
+				Favourite colour is pink
+			</div>
+			<div>
+				Favourite food is noodles
+			</div>
+			<div>
+				Favourite drink is vitamin C effervescent
+			</div>
+			<div>
+				But also tea. Tea is life.
+			</div>
 		</div>
-		<div class="stat-dex">
-			<h3>Dexterity</h3>
-			<p class="bigstat"><span class="visually-hidden">Ability score: </span>11</p>
-			<p class="smolstat"><span class="visually-hidden">Modifier: </span>+0</p>
-		</div>
-		<div class="stat-con">
-			<h3>Constitution</h3>
-			<p class="bigstat"><span class="visually-hidden">Ability score: </span>15</p>
-			<p class="smolstat"><span class="visually-hidden">Modifier: </span>+2</p>
-		</div>
-		<div class="stat-wis">
-			<h3>Wisdom</h3>
-			<p class="bigstat"><span class="visually-hidden">Ability score: </span>16</p>
-			<p class="smolstat"><span class="visually-hidden">Modifier: </span>+3</p>
-		</div>
-		<div class="stat-int">
-			<h3>Intelligence</h3>
-			<p class="bigstat"><span class="visually-hidden">Ability score: </span>14</p>
-			<p class="smolstat"><span class="visually-hidden">Modifier: </span>+2</p>
-		</div>
-		<div class="stat-cha">
-			<h3>Charisma</h3>
-			<p class="bigstat"><span class="visually-hidden">Ability score: </span>13</p>
-			<p class="smolstat"><span class="visually-hidden">Modifier: </span>+1</p>
-		</div>
-	</div>
+
 	</div>
 </div>
-
-{# TODO: make this accessible
-<section>
-	<h2>My Character Sheet</h2>
-	<p>Sorry this is not accessible yet.<br> Too long didn't read: I'm a neutral good, Human Druid (Paladin and Sorcerer multi-class).</p>
-	<h3>Alignment:</h3>
-	<p>Lawful Good ----- XXXXXXXXXXXXXXXXXXX (19)<br>
-	Neutral Good ---- XXXXXXXXXXXXXXXXXXXXXXX (23)<br>
-	Chaotic Good ---- XXXXXXXXXXXXXXX (15)<br>
-	Lawful Neutral -- XXXXXXXXXXXXXXXXX (17)<br>
-	True Neutral ---- XXXXXXXXXXXXXXXXXXXXX (21)<br>
-	Chaotic Neutral - XXXXXXXXXXXXX (13)<br>
-	Lawful Evil ----- XXXXXXXXXXX (11)<br>
-	Chaotic Evil ---- XXXXXXX (7)</p>
-
-	<h3>Law & Chaos:</h3>
-	<p>Law ----- XXXXXXXX (8)<br>
-	Neutral - XXXXXXXXXXXX (12)<br>
-	Chaos --- XXXX (4)</p>
-
-	<h3>Good & Evil:</h3>
-	<p>Good ---- XXXXXXXXXXX (11)<br>
-	Neutral - XXXXXXXXX (9)<br>
-	Evil ---- XXX (3)</p>
-
-	<h3>Race:</h3>
-	<p>Human ---- XXXXXXXXXXXXX (13)<br>
-	Dwarf ---- XXXXXXXXXXXX (12)<br>
-	Elf ------ XXXXXXXX (8)<br>
-	Gnome ---- XXXXXX (6)<br>
-	Halfling - XXXX (4)<br>
-	Half-Elf - XXXXXXXXXXXX (12)<br>
-	Half-Orc - XXXXXX (6)</p>
-
-	<h3>Class:</h3>
-	<p>Barbarian - XXXXXXXX (8)<br>
-	Bard ------ XXXXXX (6)<br>
-	Cleric ---- XXXXXXXXXX (10)<br>
-	Druid ----- XXXXXXXXXXXXXXXXXX (18)<br>
-	Fighter --- XXXXXXXX (8)<br>
-	Monk ------ XXXX (4)<br>
-	Paladin --- XXXXXXXXXXXXXXXX (16)<br>
-	Ranger ---- XXXXXXXXXXXXXX (14)<br>
-	Rogue ----- XXXXXXXXXX (10)<br>
-	Sorcerer -- XXXXXXXXXXXXXXXX (16)<br>
-	Warlock --- XXXXXXXX (8)<br>
-	Wizard ---- XXXXXXXXXXXXXX (14)</p>
-</section> #}
 
 {%- endblock -%}
