--- a/assets/css/abstracts/_variables.css
+++ b/assets/css/abstracts/_variables.css
@@ -16,21 +16,20 @@
 /* Dark mode */
 :root,
 :root[data-scheme='dark'] {
-  --bodybg: #151a2f;
-  --bg: #0d0f19;
-  --bodyrgb: 13, 15, 25;
+  --bodybg: hsl(228, 38%, 13%);
+  --bg: hsl(228, 32%, 7%);
   --highlight: Gold;
-  --accent: #FF5790;
+  --accent: hsl(340, 100%, 67%);
   --accentcontrast: Black;
   --separator: PaleGreen;
   --quote: PaleGreen;
   --interactive: OrangeRed;
-  --input-bg: #151a2f;
+  --input-bg: hsl(228, 38%, 13%);
   --input-border: SpringGreen;
   --link: DeepPink;
-  --linkaccent: #620035;
+  --linkaccent: hsl(328, 100%, 19%);
   --linkhover: SpringGreen;
-  --linkvisited: #ff5790;
+  --linkvisited: hsl(340, 100%, 67%);
   --text: LavenderBlush;
   --subtext: PeachPuff;
   --marker: "⭐";
@@ -49,22 +48,21 @@
 /* Light mode */
 @media (prefers-color-scheme: light) {
   :root {
-    --bodybg: #FFE6EE;
-    --bg: #FFD7E4;
-    --bodyrgb: 255, 250, 250;
-    --interactive: #e1007a;
+    --bodybg: hsl(340, 100%, 95%);
+    --bg: hsl(340, 100%, 92%);
+    --interactive: hsl(328, 100%, 44%);
     --input-bg: LavenderBlush;
     --input-border: DeepPink;
     --separator: DeepPink;
-    --quote: #c3006a;
-    --highlight: #006a8e;
-    --accent: #FF5790;
+    --quote: hsl(328, 100%, 38%);
+    --highlight: hsl(195, 100%, 28%);
+    --accent: hsl(340, 100%, 67%);
     --accentcontrast: Black;
-    --link: #2a00bd;
-    --linkaccent: #ffb8d0;
-    --linkhover: #1f008a;
-    --linkvisited: purple;
-    --text: #05134d;
+    --link: hsl(253, 100%, 37%);
+    --linkaccent: #FFB8D0;
+    --linkhover: hsl(253, 100%, 27%);
+    --linkvisited: Purple;
+    --text: hsl(253, 88%, 16%);
     --subtext: DarkRed;
     --marker: "💖";
     --dashboard-header-bg: Gold;
@@ -80,31 +78,30 @@
 }
 
 :root[data-scheme='light'] {
-  --bodybg: #FFE6EE;
-  --bg: #FFD7E4;
-  --bodyrgb: 255, 250, 250;
-  --interactive: #e1007a;
-  --input-bg: LavenderBlush;
-  --input-border: DeepPink;
-  --separator: DeepPink;
-  --quote: #c3006a;
-  --highlight: #cb0000;
-  --accent: #FF5790;
-  --accentcontrast: Black;
-  --link: #2a00bd;
-  --linkaccent: #ffb8d0;
-  --linkhover: #1f008a;
-  --linkvisited: purple;
-  --text: #05134d;
-  --subtext: DarkRed;
-  --marker: "💖";
-  --dashboard-header-bg: Gold;
-  --dashboard-text: Black;
-  --logo-x: Gold;
-  --logo-anim-1: hsl(255, 70%, 70%);
-  --logo-anim-2: hsl(330, 100%, 40%);
-  --logo-anim-3: hsl(10, 100%, 50%);
-  --logo-anim-4: hsl(320, 100%, 50%);
-  --logo-anim-5: hsl(204, 100%, 50%);
-  --logo-anim-6: hsl(153, 100%, 30%);
+    --bodybg: hsl(340, 100%, 95%);
+    --bg: hsl(340, 100%, 92%);
+    --interactive: hsl(328, 100%, 44%);
+    --input-bg: LavenderBlush;
+    --input-border: DeepPink;
+    --separator: DeepPink;
+    --quote: hsl(328, 100%, 38%);
+    --highlight: hsl(195, 100%, 28%);
+    --accent: hsl(340, 100%, 67%);
+    --accentcontrast: Black;
+    --link: hsl(253, 100%, 37%);
+    --linkaccent: #FFB8D0;
+    --linkhover: hsl(253, 100%, 27%);
+    --linkvisited: Purple;
+    --text: hsl(253, 88%, 16%);
+    --subtext: DarkRed;
+    --marker: "💖";
+    --dashboard-header-bg: Gold;
+    --dashboard-text: Black;
+    --logo-x: Gold;
+    --logo-anim-1: hsl(255, 70%, 70%);
+    --logo-anim-2: hsl(330, 100%, 40%);
+    --logo-anim-3: hsl(10, 100%, 50%);
+    --logo-anim-4: hsl(320, 100%, 50%);
+    --logo-anim-5: hsl(204, 100%, 50%);
+    --logo-anim-6: hsl(153, 100%, 30%);
 }
