💍 Add dark theme club webring

--- a/structure/components/webrings.njk
+++ b/structure/components/webrings.njk
@@ -8,5 +8,6 @@
 	{% include "structure/components/webrings/genlissa.njk" %}
 	{% include "structure/components/webrings/bukmarkclub.njk" %}
 	{% include "structure/components/webrings/250kb.njk" %}
+	{% include "structure/components/webrings/darkthemeclub.njk" %}
 
 </aside>
