--- a/structure/components/webrings/bukmarkclub.njk
+++ b/structure/components/webrings/bukmarkclub.njk
@@ -1,3 +1,3 @@
-<div class="webring--bukmarkclub">
+<div class="webring--bukmarkclub webring--nobuttons">
 	<a href="https://bukmark.club/directory/">Bukmark Club</a>
 </div>
