--- a/structure/components/webrings.njk
+++ b/structure/components/webrings.njk
@@ -9,5 +9,5 @@
 	{% include "structure/components/webrings/bukmarkclub.njk" %}
 	{% include "structure/components/webrings/250kb.njk" %}
 	{% include "structure/components/webrings/darkthemeclub.njk" %}
-
+	{% include "structure/components/webrings/gossipsweb.njk" %}
 </aside>
