--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@
 @import url('./components/_articles.css');
 @import url('./components/_details.css');
 @import url('./components/_button.css');
-@import url('./components/_buttonwall.css');
+@import url('./components/_links.css');
 @import url('./components/_callout.css');
 @import url('./components/_logo.css');
 @import url('./components/_nav.css');
