--- a/structure/components/webrings.njk
+++ b/structure/components/webrings.njk
@@ -10,4 +10,5 @@
 	{% include "structure/components/webrings/250kb.njk" %}
 	{% include "structure/components/webrings/darkthemeclub.njk" %}
 	{% include "structure/components/webrings/gossipsweb.njk" %}
+	{% include "structure/components/webrings/cssjoy.njk" %}
 </aside>
