🎨 Remove Stardew Valley link

--- a/content/index.njk
+++ b/content/index.njk
@@ -130,7 +130,7 @@ scripts: '
 			body = '
 			<ol class="unstyled mb-0">
 				<li>
-					<a href="https://www.goodreads.com/book/show/76713323-empire-of-storms" class="hidden">Stardew Valley</a>
+					Stardew Valley
 					<small class="d-b subtext">Teddi of Clover Farm</small>
 				</li>
 			</ol>
