--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -1,16 +1,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% if redirectTo %}(Redirecting) {%endif%}{%if title %}{{ title | safe}} -{% endif %} {{ metadata.title }}</title>
-    <meta name="description" content="{% if description %}{{ description | safe}}{% else %}{{metadata.description}}{% endif %}">
+    <title>{{ '(Redirecting) ' if redirectTo }}{{ title | safe +' - ' if title }}{{ metadata.title }}</title>
+    <meta name="description" content="{{ description | safe if description else metadata.description }}">
     {#- Redirect -#}
     {%- if redirectTo -%}
     <script>location = '{{redirectTo}}';</script>
-    <meta http-equiv="refresh" content="0; url={{metadata.url}}{{redirectTo}}">
-    <link rel="canonical" href="{{metadata.url}}{{redirectTo}}">
+    <meta http-equiv="refresh" content="0; url={{metadata.url + redirectTo}}">
+    <link rel="canonical" href="{{metadata.url + redirectTo}}">
     <meta name="robots" content="noindex">
     {%- else %}
-    <link rel="canonical" href="{{metadata.url}}{{page.url}}">
+    <link rel="canonical" href="{{metadata.url + page.url}}">
     {%- endif %}
     {# RSS Feeds #}
     <link rel="alternate" type="application/rss+xml" title="Frills" href="{{metadata.url}}/all.xml">
@@ -27,18 +27,18 @@
     <link rel="me" href="https://frills.omg.lol">
     {# OpenGraph #}
     <meta property="og:type" content="website">
-    <meta property="og:url" content="{{metadata.url}}{{page.url}}">
+    <meta property="og:url" content="{{metadata.url + page.url}}">
     <meta property="og:image" content="https://dynamic-og-image-generator.vercel.app//api/generate?title={{ title | safe }}&author={{ metadata.author.name }}&avatar={{ metadata.avatar }}&websiteUrl={{ metadata.url }}&theme=shadesOfPurple">
     {# Favicon #}
     <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     {# Style #}
-    <link href="/css/main.css?nocache={{ metadata.nocache }}" rel="stylesheet">
-    {%- if style -%}
+    <link href="/css/main.css?nocache={{ nocache if nocache else metadata.nocache }}" rel="stylesheet">
+    {%- if style %}
     <style>{{ style | safe }}</style>
     {%- endif %}
     {# Font -#}
     <link rel="preload" as="font" href="/fonts/atkinson-hyperlegible/regular.woff2">
-    <noscript><link href="/css/noscript.css?nocache={{ metadata.nocache }}" rel="stylesheet"></noscript>
+    <noscript><link href="/css/noscript.css?nocache={{ nocache if nocache else metadata.nocache }}" rel="stylesheet"></noscript>
 </head>
