🏗️ Move weeknotes heading modifer to blog post

--- a/structure/pages/item-blog.njk
+++ b/structure/pages/item-blog.njk
@@ -24,7 +24,7 @@
             </small>
             {% endif %}
         </header>
-        <div class="reading-width{% if tags.includes("weeknotes") %} h-sm{% endif %}">
+        <div class="reading-width">
             {{ content | safe }}
         </div>
         <h2 class="visually-hidden">Kudos</h2>
