--- a/structure/components/colour-palette.njk
+++ b/structure/components/colour-palette.njk
@@ -1,18 +1,18 @@
-<ul aria-hidden="true" class="colourpalette">
-	<li style="background-color: var(--text)"></li>
-	<li style="background-color: var(--subtext)"></li>
-	<li style="background-color: var(--accent)"></li>
-	<li style="background-color: var(--interactive)"></li>
-	<li style="background-color: var(--link)"></li>
-	<li style="background-color: var(--linkhover)"></li>
-	<li style="background-color: var(--linkvisited)"></li>
-	<li style="background-color: var(--dashboard-header-bg)"></li>
-	<li style="background-color: var(--callout-info)"></li>
-	<li style="background-color: var(--logo-anim-1)"></li>
-	<li style="background-color: var(--logo-anim-2)"></li>
-	<li style="background-color: var(--logo-anim-3)"></li>
-	<li style="background-color: var(--logo-anim-4)"></li>
-	<li style="background-color: var(--logo-anim-5)"></li>
-	<li style="background-color: var(--logo-anim-6)"></li>
-	<li style="background-color: var(--bodybg)"></li>
-</ul>
+<div aria-hidden="true" class="colourpalette">
+	<div style="background-color: var(--text)"></div>
+	<div style="background-color: var(--subtext)"></div>
+	<div style="background-color: var(--accent)"></div>
+	<div style="background-color: var(--interactive)"></div>
+	<div style="background-color: var(--link)"></div>
+	<div style="background-color: var(--linkhover)"></div>
+	<div style="background-color: var(--linkvisited)"></div>
+	<div style="background-color: var(--dashboard-header-bg)"></div>
+	<div style="background-color: var(--callout-info)"></div>
+	<div style="background-color: var(--logo-anim-1)"></div>
+	<div style="background-color: var(--logo-anim-2)"></div>
+	<div style="background-color: var(--logo-anim-3)"></div>
+	<div style="background-color: var(--logo-anim-4)"></div>
+	<div style="background-color: var(--logo-anim-5)"></div>
+	<div style="background-color: var(--logo-anim-6)"></div>
+	<div style="background-color: var(--bodybg)"></div>
+</div>
