--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,7 @@
 @import url('./components/_webrings.css');
 @import url('./components/_code.css');
 @import url('./components/_cards.css');
+@import url('./components/_colourpalette.css');
 
 @import url('./pages/_homepage.css');
 @import url('./pages/_bloglist.css');
