--- a/content/index.njk
+++ b/content/index.njk
@@ -62,19 +62,17 @@ scripts: '
 			<img src="/images/shrine/orla/orla15.jpg" width="100" height="100" alt="" loading="lazy" title="My shrine to Orla!">
 		</a>
 	</div>
-	{# <div class="dashboard__item">
+	<div class="dashboard__item">
 		{{ macro.callout(
 				element = 'article',
 				modifiers = 'callout--small',
-				header = '<h2>Community event</h2>',
+				header = '<h2>April 9 is CSS Naked Day!</h2>',
 				body = '
-					<a href="https://tilde.32bit.cafe/~ribose/events/valentines2024/" class="d-b mb-1"><img src="/images/32bit-cafe-vday.png" alt="32 bit cafe holidays"></a>
-					<ul class="unstyled mb-0">
-						<li>💖 Hosted by <a href="https://tilde.32bit.cafe/~ribose/events/valentines2024/">32 bit cafe</a>.</li>
-						<li>🗓️ 5 February - 12 February 2024</li>
-					</ul>
+					<p>Join us for the yearly festivities on April 9 of going nude on the Web!</p>
+					<p>The idea behind CSS Naked Day is to promote web standards. Plain and simple. This includes proper use of HTML, semantic markup, a good hierarchy structure, and of course, a good old play on words. In the words of 2006, it’s time to show off your &lt;body&gt; for what it really is.</p>
+					<a href="https://css-naked-day.github.io/" class="d-b mb-1">CSS Naked Day 2024</a>
 			') }}
-	</div> #}
+	</div>
 	<article class="dashboard__item">
 	{{ macro.callout(
 		element = 'div',
