📝 Add blog post

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,7 @@
 @import url('./components/_code.css');
 @import url('./components/_cards.css');
 @import url('./components/_colourpalette.css');
+@import url('./components/_screen.css');
 
 @import url('./pages/_homepage.css');
 @import url('./pages/_bloglist.css');
