--- a/content/now.njk
+++ b/content/now.njk
@@ -6,7 +6,7 @@ eleventyNavigation:
   emoji: <span class="emoji" aria-hidden="true">⌚</span>
   order: 2
 rss: true
-date: 2024-02-23
+date: 2024-04-09
 ---
 {% extends 'structure/templates/page-2col.njk'%}
 
@@ -14,7 +14,6 @@ date: 2024-02-23
 <h1>{{title}}</h1>
 <article class="reading-width">
   <p>What I am up to today, this week, this month, this year.<br />
-    Inspired by <a href="https://sneekrealm.neocities.org/now/">Sneek's</a> format of <a href="https://nownownow.com/about">nownownow</a> pages.</p>
 
   <small class="d-b">Last updated: {{ date | readableDate("d LLL yyyy") }}</small>
 
@@ -30,10 +29,8 @@ date: 2024-02-23
   {# ------------------------------ #}
   <h2>Weeks</h2>
   <ul>
-    <li>Office decorating 🌸</li>
+    <li>Painting and decorating my hallway.</li>
     <li>Watching <a href="https://www.formula1.com/">Formula 1</a>.
-    <li>Watching <a href="https://nebula.tv/jetlag">Jet Lag: The Game (Hide and Seek)</a>.
-    <li>My theme for <a href="https://32bit.cafe/">32bit.cafe</a> is the default at the moment!</li>
   </ul>
   {# ------------------------------ #}
   <h2>Months</h2>
